# InfernoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CleanRun  README.md  Run  RunRelease  ShaderCompile
Game/: CMakeLists.txt
Game/assets/shaders/: gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  grid.frag  grid.frag.spv  grid.vert  grid.vert.spv  lighting.frag  lighting.frag.spv  lighting.vert  shader.frag  shader.vert  test.frag  test.frag.spv  test.vert  test.vert.spv  vert.spv
Game/src/: main.cpp
Inferno/: CMakeLists.txt
Inferno/src/: Inferno.h  pch.h
Inferno/src/Inferno/: Application.cpp  Application.h  Component.cpp  Component.h  Entity.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Window.cpp  Window.h
Inferno/src/Inferno/Core/: Application.cpp  Application.h  Layer.h  LayerStack.h  Log.h  Memory.h  Window.cpp  Window.h
Inferno/src/Inferno/ECS/: Component.cpp  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Inferno/src/Inferno/Events/: ApplicationEvent.h  Event.h  Input.cpp  Input.h  KeyEvent.h  MouseEvent.h  RenderingEvent.h
Inferno/src/Inferno/Renderer/: BoundingBox.h  Buffer.cpp  Buffer.h  Camera.h  CullingSystem.cpp  CullingSystem.h  DeviceContext.cpp  DeviceContext.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  RenderData.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  RenderingContext.cpp  RenderingContext.h  Shader.cpp  Shader.h  SwapchainResources.cpp  SwapchainResources.h  Texture.cpp  Texture.h  VulkanUtils.cpp  VulkanUtils.h
Inferno/src/Inferno/Resource/: Resource.h  ResourceHandle.h  ResourceManager.h
Inferno/src/Inferno/Tools/: GeometryGenerator.cpp  GeometryGenerator.h
Inferno/src/Inferno/Utils/: DeltaTime.h
scripts/: clean_run.sh  clean_runDebug.sh  clean_runRelease.sh  install_dependencies_arch.sh  runDebug.sh  shader_compile.sh
